remove mobile overscroll

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,5 +18,12 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+
+		/* Removing mobile overscrolling*/
+		scroll-padding-top: 50px; 
+		overflow-y: hidden;
+		overflow-x: hidden;
+
+
 	}
 </style>
