add drag-select, need to fix auto scroll

--- a/src/pages/availability.astro
+++ b/src/pages/availability.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import AvailabilityChart from "../AvailabiltyChart";
+import AvailabilityChart from "../components/AvailabiltyChart";
 
 
 const isSignedIn = false;
