--- a/src/components/AvailabilityChart.css
+++ b/src/components/AvailabilityChart.css
@@ -1,8 +1,21 @@
+.relative {
+  position: relative;
+}
 
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
 
 .availability-chart {
   background-color: aquamarine;
   overflow-x: scroll;
+  text-align: center;
+  float: right;
+  width: 100%;
 }
 
 .availability-chart-days {
@@ -10,7 +23,6 @@
   flex-direction: row;
   width: fit-content;
   background-color: aliceblue;
-  overflow-x: scroll;
 }
 
 .availability-chart-day {
@@ -21,13 +33,18 @@
   text-transform: capitalize;
 }
 
+.availability-chart-grid-container {
+  height: 300px;
+}
+
 .availability-chart-grid {
   display: flex;
   flex-direction: row;
   width: fit-content;
-  height: 300px;
+  height: 100%;
   background-color: brown;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
+  pointer-events: none;
 }
 
 .availability-chart-grid-day {
@@ -40,4 +57,8 @@
   height: 15px;
   background-color: white;
   border-bottom: solid black 1px;
+}
+
+.cell.selected {
+  background-color:rgb(0,74,187);
 }
