--- a/src/components/AvailabilityChart.css
+++ b/src/components/AvailabilityChart.css
@@ -18,8 +18,11 @@
   border: 1px solid black;
 }
 
+.select-none {
+  user-select: none;
+}
+
 .availability-chart {
-  background-color: aquamarine;
   overflow-x: scroll;
   text-align: center;
   float: right;
@@ -69,4 +72,5 @@
 
 .cell.selected {
   background-color:rgb(0,74,187);
+  color: rgb(255, 255, 255);
 }
