--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout />
+<Layout>
+    <main>
+        <a href="/create-meeting">Create a Meeting</a>
+    </main>
+</Layout>
