simple landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import MeetingForm from "../lib/components/MeetingForm.astro";
 ---
 
 <Layout>
     <main>
-        <a href="/create-meeting">Create a Meeting</a>
+        <h1>Welcome to MakeMeet</h1>
+        <p>Start by scheduling your first meeting!</p>
     </main>
+
+    <MeetingForm />
 </Layout>
