took out sign in button

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import "@fontsource/oswald";
           <nav class="nav">
             <a class="nav-link" href="/">Home</a>
             <a class="nav-link" href="/create-meeting">Create</a>
-			<a class="nav-link" href="#">Sign in</a> <!-- Placeholder for future sign-in functionality -->
+			<!-- <a class="nav-link" href="#">Sign in</a> Placeholder for future sign-in functionality -->
           </nav>
         </div>
       </header>
