--- a/src/components/AvailabilityChart.css
+++ b/src/components/AvailabilityChart.css
@@ -82,7 +82,8 @@
 }
 
 .cell {
-  height: 17px;
+  height: 22px;
+  font-size: 15px;
   background-color: white;
   border-bottom: solid black 1px;
 }
