--- a/src/components/AvailabilityChart.css
+++ b/src/components/AvailabilityChart.css
@@ -40,7 +40,7 @@
 }
 
 .availability-chart.loading {
-  height: 60vh;
+  height: 70vh;
 }
 
 .display {
@@ -118,4 +118,8 @@
 .scale-segment {
   flex-grow: 1;
   height: 100%;
+}
+
+.controls {
+  height: 30px;
 }
