--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import MeetingForm from "../lib/components/MeetingForm.astro";
+import MeetingForm from "../lib/components/MeetingForm";
 ---
 
 <Layout>
