client side react

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,5 +9,5 @@ import MeetingForm from "../lib/components/MeetingForm";
         <p>Start by scheduling your first meeting!</p>
     </main>
 
-    <MeetingForm />
+    <MeetingForm client:only />
 </Layout>
