--- a/src/pages/create-meeting.astro
+++ b/src/pages/create-meeting.astro
@@ -1,11 +1,13 @@
 ---
+export const prerender = false;
+
 import Layout from "../layouts/Layout.astro";
-import MeetingForm from "../lib/components/MeetingForm";
+import MeetingForm from "../lib/components/MeetingForm.tsx";
 ---
 
 <Layout>
   <main>
-    <MeetingForm />
+    <MeetingForm client:only/>
   </main>
 </Layout>
 
