--- a/src/lib/components/MeetingForm.css
+++ b/src/lib/components/MeetingForm.css
@@ -181,7 +181,7 @@
   background: #7ebdfc;
   border: 0px;
   color: white;
-  font-family: bold;
+  font-family: sans-serif;
   font-weight: bold;
   font-size: 20px;
   padding: 20px 42px;
