--- a/src/components/AvailabilityChart.css
+++ b/src/components/AvailabilityChart.css
@@ -1,3 +1,15 @@
+/* Prevent iOS Safari auto-zoom on form controls */
+.prevent-ios-zoom input,
+.prevent-ios-zoom select,
+.prevent-ios-zoom textarea,
+.prevent-ios-zoom button,
+.prevent-ios-zoom .wide-input,
+.prevent-ios-zoom .time-input {
+  font-size: 16px;
+  -webkit-text-size-adjust: 100%;
+}
+
+
 .relative {
   position: relative;
 }
