Made CreateMeetingForm SSR'd.
It's a lot nicer already.

--- a/src/pages/create-meeting.astro
+++ b/src/pages/create-meeting.astro
@@ -7,7 +7,7 @@ import MeetingForm from "../lib/components/CreateMeetingForm.tsx";
 
 <Layout>
   <main>
-    <MeetingForm client:only/>
+    <MeetingForm client:load/>
   </main>
 </Layout>
 
