--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ import MeetingForm from "../lib/components/CreateMeetingForm";
         <p>Start by scheduling your first meeting!</p>
     </main>
 
-    <MeetingForm client:only />
+    <MeetingForm client:load />
 </Layout>
