Removed "Home" route.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,7 @@ import "@fontsource/oswald";
         <div class="container header-inner">
           <a class="brand" href="/">MakeMeet</a>
           <nav class="nav">
-            <a class="nav-link" href="/">Home</a>
-            <a class="nav-link" href="/create-meeting">Create</a>
+            <a class="nav-link" href="/create-meeting">Create Meeting</a>
 			<!-- <a class="nav-link" href="#">Sign in</a> Placeholder for future sign-in functionality -->
           </nav>
         </div>
