--- a/src/pages/availability/[meetingId].astro
+++ b/src/pages/availability/[meetingId].astro
@@ -1,9 +1,9 @@
 ---
 /** biome-ignore-all lint/correctness/noUnusedImports: We barely use Astro. When biome supports Astro stably, we'll remove this. But for now it's just not worth it. */
 
-import AvailabilityChart from "../../components/AvailabilityChart";
-import AvailabilityPage from "../../components/AvailabilityPage";
-import Layout from "../../layouts/Layout.astro";
+import AvailabilityChart from "#/src/components/AvailabilityChart";
+import AvailabilityPage from "#/src/components/AvailabilityPage";
+import Layout from "#/src/layouts/Layout.astro";
 
 // biome-ignore lint/correctness/noUnusedVariables: We barely use Astro. When biome supports Astro stably, we'll remove this. But for now it's just not worth it to configure.
 const { meetingId } = Astro.params;
