--- a/src/pages/create-meeting.astro
+++ b/src/pages/create-meeting.astro
@@ -1,8 +1,8 @@
 ---
 /** biome-ignore-all lint/correctness/noUnusedImports: We barely use Astro. When biome supports Astro stably, we'll remove this. But for now it's just not worth it. */
 
-import Layout from "../layouts/Layout.astro";
-import MeetingForm from "../lib/components/CreateMeetingForm.tsx";
+import MeetingForm from "#/src/components/CreateMeetingForm.tsx";
+import Layout from "#/src/layouts/Layout.astro";
 ---
 
 <Layout>
